--- a/client/config.yaml
+++ b/client/config.yaml
@@ -2,5 +2,5 @@
 # Значения можно переопределять в зависимости от окружения.
 control_server_url: "http://127.0.0.1:8080"
 core_path: "./bin/sing-box.exe"
-log_level: "info"
+log_level: "debug"
 log_file: "./logs/app.log"
